--- a/src/main/resources/public/stylesheets/catalogue.css
+++ b/src/main/resources/public/stylesheets/catalogue.css
@@ -1,4 +1,4 @@
-  @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
 
 :root{
     --black: #1B1722;
@@ -13,19 +13,19 @@
     box-sizing: border-box;
     outline: none;
     border: none;
-    text-decoration: none;
+    text-decoration: none !important;
     transition: .2s linear;
 }
 
 html{
-    font-size: 62.5%;   
+    font-size: 62.5% !important;   
     overflow-x: hidden;
-    scroll-padding-top: 7rem;
+    scroll-padding-top: 7rem !important;
     scroll-behavior: smooth;
 }
 
 html::-webkit-scrollbar{
-    width: .8rem;
+    width: .8rem !important;
 }
 
 html::-webkit-scrollbar-track{
@@ -41,17 +41,17 @@ html::-webkit-scrollbar-thumb{
 .header{
     top: 0;right: 0;left: 0;
     background-color: var(--white);
-    display: flex;
+    display: flex !important;
     align-items: center;
-    justify-content: space-between;
-    position: fixed;
-    padding: 1.4rem 7%;
+    justify-content: space-between !important;
+    position: fixed !important;
+    padding: 1.4rem 7% !important;
     z-index: 999;
 }
 
 .header .logoContent{
-    display: flex;
-    align-items: center;
+    display: flex !important;
+    align-items: center !important;
 }
 
 .header .logoContent .logo img{
@@ -64,8 +64,13 @@ html::-webkit-scrollbar-thumb{
     font-weight: bolder;
 }
 
+.header .logoContent{                 /* effected by bootstrap */
+    padding-bottom: 2px;
+}
+
 .header .logoName{
-    padding-left: 10px;
+    padding-left: 10px !important;
+    padding-top: 9px !important;                 /* effected by bootstrap */
 }
 
 .header .navbar a{
@@ -77,7 +82,7 @@ html::-webkit-scrollbar-thumb{
 
 .header .navbar a:hover{
     border-bottom: .1rem solid var(--black);
-    padding-bottom: .4rem;
+    padding-bottom: .4rem !important;
 }
 
 .header .icon i{
@@ -87,272 +92,238 @@ html::-webkit-scrollbar-thumb{
     cursor: pointer;
 }
 
+
 /*header ends here*/
 
-/* main */
+
+
+/*main starts here*/
+body{
+  background-image: url("https://www.transparenttextures.com/patterns/low-contrast-linen.png");
+}
+
 main{
-  margin-top: 130px;
+    margin-top: 130px;
 }
-
+  
 h1{
-  font-size: 5rem;
-  position: relative;
-  text-align: center;
+    font-size: 5rem;
+    font-weight: 800;
+    position: relative;
+    text-align: center;
 }
 
-h3#main{
-  font-size: 2rem;
-  position: relative;
-  text-align: center;
+table.tableOrder{
+  width: 90%;
+  height: auto;
+  background-color: #f2e8b9;
+  margin: 5% auto;
 }
 
-h3,h4,h5{
-  font-size: 2rem;
+table, th, tr, td{
+  border: 1.2px solid black;
+  border-collapse: collapse;
 }
 
-/* h5{
+.tableRow{
+  background-color: #f4e292;
+}
+
+/* .tableHeader1{
   text-align: center;
+  font-size: 30px;
+  padding: 20px;
+  background-color: #6b8879;
 } */
 
-.card#p1 {
-  position: relative;
-  height: 300px;
-  color: #a18a96;
+.tableHeader2{
   text-align: center;
-  display: grid;
-  place-content: center;
-  padding: 10px;
-  border-radius: 20px;
-  z-index: 1;
-  overflow: hidden;
-  margin-bottom: 20px;
-}
-.card#p2 {
-  position: relative;
-  height: 300px;
-  color: #a18a96;
-  text-align: center;
-  display: grid;
-  place-content: center;
-  padding: 10px;
-  border-radius: 20px;
-  z-index: 1;
-  overflow: hidden;
-  margin-bottom: 20px;
-}
-
-.card#p3 {
-  position: relative;
-  height: 300px;
-  color: #a18a96;
-  text-align: center;
-  display: grid;
-  place-content: center;
-  padding: 10px;
-  border-radius: 20px;
-  z-index: 1;
-  overflow: hidden;
-  margin-bottom: 20px;
-}
-/* redvelvet */
-.card#p4 {
-  position: relative;
-  height: 300px;
-  color: #a18a96;
-  text-align: center;
-  display: grid;
-  place-content: center;
-  padding: 10px;
-  border-radius: 20px;
-  z-index: 1;
-  overflow: hidden;
-  margin-bottom: 20px;
-}
-/* kek batik */
-.card#p5 {
-  position: relative;
-  height: 300px;
-  color: #a18a96;
-  text-align: center;
-  display: grid;
-  place-content: center;
-  padding: 10px;
-  border-radius: 20px;
-  z-index: 1;
-  overflow: hidden;
-  margin-bottom: 20px;
-}
-/* brownies */
-.card#p6 {
-  position: relative;
-  height: 300px;
-  color: #a18a96;
-  text-align: center;
-  display: grid;
-  place-content: center;
-  padding: 10px;
-  border-radius: 20px;
-  z-index: 1;
-  overflow: hidden;
-  margin-bottom: 20px;
-}
-.card::before,
-.card::after {
-  content: '';
-  position: absolute;
-  left: 0;
-  width: 100%;
-  height: calc(60% + 35px);
-  background-color: #fff;
-  transition: transform .5s.25s ease-in;
-  z-index: -1;
-}
-
-.card::before {
-  top: 0;
-  clip-path:
-      polygon(0 0, 100% 0, 100% 45%, 0% 100%);
-  transform: translateY(-100%);
-}
-
-.card::after {
-  bottom: 0;
-  clip-path: polygon(0 55%, 100% 0, 100% 100%, 0% 100%);
-  transform: translateY(100%);
-}
-
-.card__content {
-  opacity: 0;
-  transition: opacity .25s;
-}
-
-.card__title {
-  color: #6A515E;
-  margin-bottom: 15px;
-}
-
-.card__description {
-  font-size: 18px;
-  padding: 0 10px;
-}
-
-.card:hover::before,
-.card:hover::after {
-  transform: translateY(0);
-}
-
-.card:hover .card__content {
-  opacity: 1;
-  transition-delay: .75s;
-}
-/* Style for js*/
-  .cakename{
-      cursor: pointer;
-      width: 50%;
-      border: none;
-      outline: none;
-      transition: 0.4s;
-      margin: auto;
-  }
-  .desc{
-     margin: 20px auto 0 auto;
-     width: 90%; 
-     padding: auto;
-     font-weight: bolder;
-  }
-  /* .active, */
-  .cakename:hover {
-      background-color: #f2e8b9;
-      border-radius: 10px;
-  }
-  .desc{
-      padding:  18px;
-      background-color: #F5F3F5;
-      display: none;
-      overflow: hidden;
-      border-radius: 10px;
-      font-size: 18px;
-  }
-  .cakename::after{
-      font-size: 13px;
-      color: #777;
-      float: right;
-      margin-left: 5px;
-  }
-  .card:hover .card__content {
-    opacity: 1;
-    transition-delay: .75s;
-  }
-  
-/* style end */
-.container{
-    display: grid;
-    grid-template-columns: 33.33% 33.33% 33.33%;
-    padding: 70px 4%;
-}
-.grid{
-  background-color: #8AA899;
-  border: 1px solid rgba(0, 0, 0, 0.8);
+  font-size: 25px;
   padding: 20px;
-  text-align: center;
 }
 
-/* order button */
+.gridmain {
+  display: flex;
+  text-align: center;
+  padding: 0 30px;
+}
+
+.tableList1,
+.tableList2,
+.tableList3,
+.tableList4,
+.tableList5,
+.tableList6{
+  text-align: center;
+  font-size: 20px;
+  font-weight: 800;
+  padding: 10px;
+  width: 40%;
+}
+
+.tableOption1,
+.tableOption2,
+.tableOption3,
+.tableOption4,
+.tableOption5,
+.tableOption6{
+  text-align: center;
+  font-size: 20px;
+  font-weight: 800;
+  padding: 10px;
+  width: 20%;
+}
+
+.tableRadio1,
+.tableRadio2,
+.tableRadio3,
+.tableRadio4,
+.tableRadio5,
+.tableRadio6{
+  text-align: left;
+  font-size: 20px;
+  padding: 3%;
+  width: 20%;
+}
+
+.containerimage {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: auto;
+}
+
+
+
+.panel {
+  background-size: auto;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 40vh;
+  color: #fff;
+  cursor: pointer;
+  flex: 0.5;
+  margin: 10px;
+  position: relative;
+  transition: flex 0.7s ease-in;
+  border-radius: 20px;
+}
+
+.panel:hover {
+  flex: 3;
+}
+
+@media (max-width: 480px) {
+  .container {
+    width: 100vw;
+  }
+
+  .panel:nth-of-type(4),
+  .panel:nth-of-type(5) {
+    display: none;
+  }
+}
 .order button {
-  border: none;
+  /* display: block; */
+  float: left;
+  /* border: 1px solid black; */
+  
   outline: 0;
   padding: 12px;
   color: white;
   background-color: #000;
   text-align: center;
   cursor: pointer;
-  width: 92%;
+  width: 100%;
   font-size: 18px;
-  position: absolute;
+  /* position: absolute; */
 }
+
+h2.offcanvas-title1, 
+h2.offcanvas-title2,
+h2.offcanvas-title3,
+h3.offcanvas-title1,
+h3.offcanvas-title2,
+h3.offcanvas-title3{
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  font-weight: 800;
+}
+
+.offcanvas-header{
+  background-color: #f2e8b9;
+}
+
+.offcanvas-body{
+  padding: 5%;
+}
+
+.myForm1,
+.myForm2,
+.myForm3{
+  margin-top: 10%;
+  margin-bottom: 10%;
+  padding: 5%;
+  font-size: large;
+}
+
+.submitOrder1,
+.submitOrder2, 
+.submitOrder3{
+  display: flex;
+  justify-content: center;
+  margin-top: 10%;
+}
+
+/*main ends here*/
+
+
 
 /*footer starts here*/
 .footer {
   background-color: #8AA899;
-  margin-top: 70px;
-  padding-bottom: 10px;
+  margin-top: 70px !important;
+  padding-bottom: 10px !important;
 }
 
 .footer .box-container{
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
-  gap: 1.5rem;
-  padding: 1% 5%;
+  gap: 1.5rem !important;
+  padding: 1% 5% !important;
 }
 
 .footer .box-container .box h3{
-  font-size: 2.2rem;
-  color: var(--black);
-  padding: 1rem 0;
+  font-size: 2.2rem !important;
+  color: var(--black) !important;
+  padding: 1rem 0 !important;
+  font-weight: 700;                 /* needed bcs effected by bootstrap */
 }
+
 .footer .box-container .box p{
   display: block;
   font-size: 1.6rem;
   color: var(--black);
-  padding: 1rem 0;
+  padding: 1rem 0 !important;
 }
 
 .footer .box-container .box a{
   display: block;
   font-size: 1.6rem;
   color: var(--black);
-  padding: 1rem 0;
+  padding: 1rem 0 !important;
 }
 .footer .box-container .box a i{
-  padding-right: .5rem;
+  padding-right: .5rem !important;
   color: var(--black);
 }
 .footer .box-container .box a:hover i{
-  padding-right: 2rem;
+  padding-right: 2rem !important;
 }
 
 .footer .share{
-  padding: 1rem 0;
+  padding: 1rem 0 !important;
   text-align: center;
 }
 .footer .share a{
