--- a/src/main/resources/templates/user/orderHistory.html
+++ b/src/main/resources/templates/user/orderHistory.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Orders</title>
+  <title>Order History</title>
 
   <!-- favicon -->
   <link rel="icon" type="image/x-icon" th:href="@{image/cake.png}">
@@ -18,104 +18,71 @@
   <link rel="stylesheet" th:href="@{stylesheets/paymentFileUpload.css}">
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+
+  <style>
+    table {
+      width: 100%;
+      border-collapse: collapse;
+    }
+
+    th, td {
+      padding: 10px;
+      text-align: left;
+      border-bottom: 1px solid #ddd;
+    }
+
+    .rejected {
+      background-color: #ffcccc;
+    }
+
+    .pending {
+      background-color: #ffffcc;
+    }
+
+    .success {
+      background-color: #ccffcc;
+    }
+
+    .paid {
+      color: green;
+      font-weight: bold;
+    }
+
+    .unpaid {
+      color: red;
+      font-weight: bold;
+    }
+  </style>
 </head>
 
-<!-- header section start here  -->
-<header class="header">
-  <div class="logoContent">
-      <a th:href="@{/home}" class="logo"><img th:src="@{image/cake.png}" alt="cake icon"></a>
-      <h1 class="logoName">iRizq Kitchen</h1>
-  </div>
-
-  <nav class="navbar">
-      <a th:href="@{/home}">Home</a>
-      <a th:href="@{/catalogue}">Catalogue</a>
-      <a th:href="@{/about}">About</a>
-      <a th:href="@{/faqs}">FAQs</a>
-      <a th:href="@{/custprofile}">Profile</a>
-  </nav>
-</header>
-<!-- header section end here  -->
-
 <body>
-  
-  <h1>My Orders</h1><br>
+  <h1>Order History</h1>
 
-  <div class=".table-responsive">
-    <table class="table table-bordered">
-      <thead>
-        <tr>
-          <th scope="col">Order</th>
-          <th scope="col">Date</th>
-          <th scope="col">Payment Status</th>
-          <th scope="col">Fulfillment Status</th>
-          <th scope="col">Total</th>
-          <th scope="col">Invoice</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <th scope="row">1</th>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-        </tr>
-        <tr>
-          <th scope="row">2</th>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-        </tr>
-        <tr>
-          <th scope="row">3</th>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
+  <table>
+    <thead>
+      <tr>
+        <th>Order ID</th>
+        <th>Date</th>
+        <th>Payment Status</th>
+        <th>Order Status</th>
+        <th>Total</th>
+        <th>Invoice</th>
+      </tr>
+    </thead>
+    <tbody>
+      <!-- Display orders with details -->
+      <tr th:each="order : ${orders}">
+        <td th:text="${order.orderId}"></td>
+        <td th:text="${order.date}"></td>
+        <td th:text="${order.paymentStatus}" th:class="${order.paymentStatus.toLowerCase()}"></td>
+        <td th:text="${order.orderStatus}" th:class="${order.orderStatus.toLowerCase()}"></td>
+        <td th:text="${order.total}"></td>
+        <td><a th:href="@{'/invoice/' + ${order.orderId}}">View Invoice</a></td>
+        <!-- <td><a th:href="@{/invoice/{orderId}(orderId=${order.orderId})}">View Invoice</a></td> -->
+      </tr>
+    </tbody>
+  </table>
 </body>
-
-<!-- footer section start here  -->
-<footer class="footer" id="contact">
-  <div class="box-container">
-      
-      <div class="box">
-          <h3>Opening Hours</h3>
-          <p>Weekdays: 10:00AM - 5:00PM <br> Weekends: 10:00AM - 6:00PM</p>
-      </div>
-
-      <div class="box">
-          <h3>Contact Us</h3>
-          <p>iRizq Kitchen Sabak Bernam (HQ)</p>
-          <p>No.12 Jalan Dewan, Pekan Sabak Bernam, <br> 45200 Sabak Bernam, Selangor</p>
-          <a href="tel:+60 1123 4567" target="_blank"> <i class="fas fa-phone"></i>+60 1123 4567</a>
-          <a href="mailto: irizqkitchen@gmail.com" target="_blank"> <i class="fas fa-envelope"></i>irizqkitchen@gmail.com</a>
-      </div>
-
-      <div class="box">
-          <h3>About Us</h3>
-          <a th:href="@{http://localhost:5000/about#:~:text=Location-,Vision,-Let%20us%20eat}"> <i class="fas fa-arrow-right"></i>Vision</a>
-        <a th:href="@{http://localhost:5000/about#:~:text=in%20Sabak%20Bernam-,Mission,-Handcrafted%20with%20love}"> <i class="fas fa-arrow-right"></i>Mission</a>
-          <a href="https://goo.gl/maps/Yeepko5QdJ3EMDox7" target="_blank"> <i class="fas fa-arrow-right"></i>Location</a>
-      </div>
-
-  </div>
-  <div class="share">
-      <a href="https://web.facebook.com/rizq.khazinuddin" class="fab fa-facebook-f" target="_blank"></a>
-      <a href="https://www.instagram.com/irizq_kitchen/" class="fab fa-instagram" target="_blank"></a>
-  </div>
-  <div class="credit">
-      irizqkitchen <span>&copy;</span> 2022
-  </div>
-</footer>
 
   <!-- swiper js link  -->
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
