--- a/src/main/resources/templates/admin/staffmenu.html
+++ b/src/main/resources/templates/admin/staffmenu.html
@@ -30,10 +30,11 @@
 
   <nav class="navbar">
     <a th:href="@{/stafflist}">Baker list</a>
-    <a th:href="@{/stafforder}">Order List</a>
-    <a th:href="@{/staffmenu}">Menu</a>
-    <a th:href="@{/staffregister}">Register new baker</a>
-    <a th:href="@{/staffprofile}">Profile</a>
+      <a th:href="@{/stafforder}">Order List</a>
+      <a th:href="@{/stafforderhistory}">Order History</a>
+      <a th:href="@{/staffmenu}">Menu</a>
+      <a th:href="@{/staffregister}">Register new baker</a>
+      <a th:href="@{/staffprofile}">Profile</a>
   </nav>
 </header>
 <!-- header section end here   -->
