--- a/src/main/resources/templates/admin/productdetail.html
+++ b/src/main/resources/templates/admin/productdetail.html
@@ -43,29 +43,29 @@
             modelAttribute  ="product"
             th:object="${product}"
             >
-            <div class="card col-6">
+            <div class="card col-4">
                 <div class="card-body">
                 <input type="hidden" name="proid" th:value="${product.proid}"  readonly>
                 <div class="mb-3">
-                  <label for="proname" class="d-flex justify-content-center">Product Name:</label>
-                  <input type="text" name="proname" class="form-control-plaintext" th:value="${product.proname}" disabled readonly>
+                  <label for="proname" class="form-label ">Product Name:</label>
+                  <input type="text" name="proname" class="form-control-plaintext " th:value="${product.proname}"  readonly>
                 </div>
                 <div class="mb-3">
-                  <label for="protype">Product Type:</label>
-                  <input type="text" name="protype" class="form-control-plaintext" th:value="${product.protype}" disabled readonly >
+                  <label for="protype" class="form-label ">Product Type:</label>
+                  <input type="text" name="protype" class="form-control-plaintext" th:value="${product.protype}"  readonly >
                 </div>
                 <div class="mb-3">
-                  <label for="proprice">Product Price:</label>
+                  <label for="proprice" class="form-label ">Product Price:</label>
                   <input type="number" name="proprice"  th:value="${product.proprice}" >
                 </div>  
                 <th:block th:if="${product.protype == 'cake'}">
-                    <label for="productsname" class="form-label">Cake Size</label>
-                    <input class="form-control-plaintext" type="text" th:value="${product.cakesize}" disabled readonly>
+                    <label for="productsname" class="form-label ">Cake Size:</label>
+                    <input class="form-control-plaintext " type="text" th:value="${product.cakesize}"  readonly>
                 </th:block>
                 
                 <th:block th:if="${product.protype == 'cupcake'}">
-                    <label for="productsname" class="form-label">Cupcake Topping</label>
-                    <input class="form-control-plaintext" type="text"  th:value="${product.cuptoppings}" disabled readonly>
+                    <label for="productsname" class="form-label ">Cupcake Topping</label>
+                    <input class="form-control-plaintext d-flex " type="text"  th:value="${product.cuptoppings}"  readonly>
                 </th:block>
 
                 <div class="d-flex justify-content-center">
